# open-opticon

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN_WITNESS_GOSSIP.md  HANDOFF.md  HARDWARE.md  INTEGRATIONS.md  PI_ST_ELEMENT.md  REPRODUCIBLE.md  ROADMAP.md  RUNBOOK.md  SAMPLE_ATTESTATION.md  T3.md  THREAT_MODEL.md  USE_CASES.md  VERIFY.md  WHY_TEE.md  index.html  transparency.html  verify.html  verify.wasm.sha256
docs/assets/: walkthrough.cast
onchain/: .gitignore  README.md  REDEPLOY.md  call-sepolia.sh  foundry.toml
onchain/script/: Deploy.s.sol  (+2 more)
sim/: Makefile  he_bundle.c  he_bundle.h  he_detect_cli.c  he_pcm.c  he_pcm.h  he_sim_sign.c  he_vision_sign.c
test/: gen_checkpoint_fixture.sh  gen_consistency_cases.sh  gen_frames.py  gen_proof_fixture.sh  gen_quorum_fixture.sh  gen_vision_frames.py  run_chain_e2e.sh  run_consent_e2e.sh  run_cose_e2e.sh  run_demo.sh  run_e2e.sh  run_eat_e2e.sh  run_endorse_e2e.sh  run_multimodal_e2e.sh  run_port_diff.sh  run_quorum_hetero_e2e.sh  run_tpm_e2e.sh  run_vision_e2e.sh  run_voxterm_e2e.sh  run_witness_e2e.sh  test_cose.c  test_detector.c  test_payload.c  test_vision.c  wasm_verify_test.js
tools/: build_wasm.sh  cross.sh  qemu_attest.expect  qemu_bound_output.expect  qemu_tamper.expect  render_video.py  repro.sh  run_gui.sh  run_qemu.sh  sites.sh  stage_optee.sh  verify_all.sh  voxterm_demo.sh
zk/: Cargo.toml  README.md
zk/host/: Cargo.toml
zk/host/src/: main.rs
zk/oo-detect/: Cargo.toml
zk/oo-detect/src/: main.rs
(+77 files in other folders)
